app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
 body {
	width: 100%;
	height: 100%;
	padding: 0;
	margin: 0;
	background: #660033;
}

/*makes sure this fills the whole page and no unecessary padding on our elements*/

/*navigations position is fixed so it always stays at the top*/
/*z-index ensures it will always be on top of any layer no matter which slide*/
/*width 100% so it scrolls across the whole page*/

.nav {
	padding: 0;
	margin: 0;
	background-color: rgba(0, 0, 0, 0.5);
	position: fixed;
	top: 0;
	z-index: 999;
	width: 100%;
}

		li {
			display: inline-block;
			padding: 5px 10px;
		}

	/*text decoration here gets rid of the underline and makes bigger*/

			a {
				color: white;
				font-size: 18px;
				text-decoration: none;
			}

			/*hover and active not working at the moment*/

				a:hover {
					color: lighten(#e1e1e1,20%);
			}
	
		.active {
			background-color: lighten(blue, 20%);
		}

.main {
	margin-top: 50px;
	color: white;
}


.slide {
	background-attachment: fixed;
	width: 100%;
	height: 100%;
	position: relative;
	padding: 30px;
}

.button-image {
	display: block;
	position: absolute;
	width: 50px;
	height: 50px;
	bottom: 5px;
	left: 50%;
	margin-left: -25px;
	/*background-image: url("assets/arrow.png");
	background-size: 50px 50px;
	background: no-repeat;*/
}

.photo {
	border-width: 15px;
	border-style: solid;
	border-color: rgba(0, 0, 0, 0.5);
}

.image-wrapper {
	float: right;
	width: 100%;
	height: 100%;
	position: relative;
	padding: 30px;

}

.about-me-text {
	float: right;
	color: white;
	font-size: 20px;
}

#slide1{
	background-image: url("slideBackground.jpeg");
	-webkit-background-size: cover;
	-o-background-size: cover;
	-moz-background-size: cover;
	background-size: cover;
	z-index: 9;
}

#slide2{
	background: white;
	
}

#slide3{
	background-color: orange;
}

#slide4{
background: black;
}

.logo-contacts {
	position: relative;
	left: 30%;
}

.git-logo{
	width: 150px;
  height: auto;
}

.linkedin-logo {
	width: 225px;
  height: auto;
  padding-left: 100px;
}

